--- a/customer.html
+++ b/customer.html
@@ -160,5 +160,9 @@
 		}
     }
       </script>
+	  <script>
+       let national = sessionStorage.getItem('data') ;
+       sessionStorage.setItem('data',national);
+      </script>
 </body>
 </html>
