--- a/firstpage.html
+++ b/firstpage.html
@@ -49,7 +49,7 @@
       encode: true,
     }).done(function (data) {
         sessionStorage.setItem('data',data['national_id']);
-        location.replace("test.html");
+        location.replace("customer.html");
        
       console.log(data);
      // alert(data['message']);
