--- a/customer_register.html
+++ b/customer_register.html
@@ -81,7 +81,7 @@
                     return false;
                 }
 
-                if(national_id.length > 14 || national_id.length < 14){
+                if(national_id.length != 14){
                     alert("The National ID should be 14 digits. Please re-enter it.");  
                         return false;
                 }
